--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -1,3 +1,7 @@
+body{
+	background-image: url(../Imagenes/fondo.png);
+}
+
 form{
 	padding: 30px 0px;
     border-bottom: 1px solid #bab3b3;
@@ -5,4 +9,32 @@ form{
 .top-input{
 	padding: 0px;
     background-color: #e9e4e4;
+}
+
+.ajaxContainer div{
+	background-color: white;
+    width: 200px;
+    border-radius: 7px;
+    border: 1px solid black;    
+    margin: 15px;
+    padding: 10px;
+}
+.ajaxContainer div p{
+	margin-top: 22px;
+    font-size: 0.8rem;
+}
+
+@font-face {
+   font-family: pokemonFont;
+   src: url(../Font/PokemonGB.ttf);
+}
+
+body{
+	    font-family: pokemonFont;
+}
+h2{
+	font-size: 1.2rem;
+}
+h3{
+	font-size: 0.8rem;
 }
