--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -1,9 +1,9 @@
 body{
-	background-image: url(../Imagenes/fondo.png);
+	background-image: url(../Imagenes/fondo1.png);
 }
 
 form{
-	padding: 30px 0px;
+	padding: 30px 65px;
     border-bottom: 1px solid #bab3b3;
 }
 .top-input{
@@ -38,4 +38,9 @@ h2{
 }
 h3{
 	font-size: 0.8rem;
+}
+#type-selector{
+	width: 125px;
+    float: left;
+    margin-right: 30px;
 }
